--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -186,7 +186,7 @@ textarea {
   margin-top: 34px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 ///
@@ -229,22 +229,49 @@ textarea {
   display: block;
   margin-top: 7px;
   margin-bottom: 6px;
+  vertical-align: top;
   width: 29px;
   height: 29px;
-  border: 1px solid #000;
-  box-shadow: 0 1px 3px rgba(17, 17, 14, 0.5);
 }
+
+.bl_soc{
+  &__twiter{
+    @include sprite($icon-twitter);
+  }
+  &__vk{
+    @include sprite($icon-vk);
+  }
+  &__facebook{
+    @include sprite($icon-facebook);
+  }
+  &__ssh{
+    @include sprite($icon-rss);
+  }
+  &__google{
+    @include sprite($icon-google-);
+  }
+}
+
+
+
 
 .bl_bigBasket{
   margin-top: 6px;
   padding: 8px 9px 0;
+  padding-right: 0;
   display: block;
   width: 100%;
   color: #fff;
   height: 67px;
   box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
-  background-color: #de3635;
-  background-image: linear-gradient(to top, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%);
+  background: #de3635 linear-gradient(to top, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%);
+}
+
+.bl_bigBasket__text,
+.bl_basket__text{
+  float: left;
+  display: block;
+
 }
 
 .bl_bigBasket__icon{
@@ -254,7 +281,6 @@ textarea {
   margin-right: 28px;
   width: 54px;
   height: 47px;
-  box-shadow: 0 1px 1px rgba(1, 1, 1, 0.5);
   @include sprite($icon-basket-big);
 }
 
@@ -280,6 +306,102 @@ textarea {
   font-weight: 500;
   text-transform: uppercase;
 }
+
+
+.bl_information{
+  width: 201px;
+  color: #ffffff;
+  text-shadow: 0 1px 1px rgba(1, 1, 1, 0.5);
+  font-family: $HelveticaNeue;
+}
+
+.bl_information__text{
+
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 27.7px;
+}
+
+.bl_information__tel{
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #fff;
+}
+
+.bl_information__data{
+  font-weight: 300;
+  line-height: 22px;
+}
+
+.bl_information__button{
+  width: 100%;
+  color: #fff;
+  height: 66px;
+  box-shadow: 0 2px 5px rgba(1, 1, 1, 0.5), inset 0 1px 1px rgba(255, 255, 255, 0.29);
+  background-color: #de3635;
+  background-image: linear-gradient(to top, rgba(176, 39, 39, 0.54) 0%, rgba(222, 54, 53, 0.54) 100%);
+  font-weight: 700;
+  line-height: 24px;
+  font-size: 26px;
+  text-transform: uppercase;
+
+
+    .big{
+      font-size: 30px;
+    }
+
+}
+
+.product_slider{
+  clear: both;
+  width: 100%;
+  margin-top: -180px;
+}
+
+.product_slider__full{
+  width: 100%;
+  border: 1px solid #000;
+}
+
+.product_slider__item{
+  position: relative;
+  max-width:128px;
+}
+
+.product_slider__link{
+  display: block;
+  width: 100%;
+}
+
+.product_slider__img{
+  width: 100%;
+}
+
+
+.product_slider__name{
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  color: $color_green;
+  font-family: $BebasNeueBold;
+  font-weight: 400;
+  font-size: 63px;
+}
+
+.product_slider__material{
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  color: $color_green;
+  font-family: $BebasNeueBold;
+  font-size: 23px;
+}
+
+
+
+
+
+
+
+
+
 
 /*********************************************/
 /*FOOTER*/
