--- a/app/sass/components/_variables.scss
+++ b/app/sass/components/_variables.scss
@@ -7,6 +7,7 @@ $color_blue2: #0d8dd2;
 $color_blueDark: #014385;
 
 $color_red: #de0914;
+$color_darkRed: #992727;
 $color_pink: #f00;
 
 $color_green: #608b30;
