--- a/app/css/main.css
+++ b/app/css/main.css
@@ -821,6 +821,12 @@ hr {
   font-style: normal; }
 
 @font-face {
+  font-family: "Helvetica Neue - Medium Italic";
+  src: url("../fonts/Helvetica Neue/HelveticaNeueCyr-Italic.woff2") format("woff2"), url("../fonts/Helvetica Neue/HelveticaNeueCyr-Italic.woff") format("woff"), url("../fonts/Helvetica Neue/HelveticaNeueCyr-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
   font-family: "Bebas Neue Bold";
   src: url("../fonts/Bebas Neue/BebasNeueBold.woff2") format("woff2"), url("../fonts/Bebas Neue/BebasNeueBold.woff") format("woff"), url("../fonts/Bebas Neue/BebasNeueBold.ttf") format("truetype");
   font-weight: 400;
@@ -990,7 +996,7 @@ textarea::-moz-focus-inner {
 
 .bl_navigation__full {
   position: absolute;
-  top: 34px;
+  top: 28px;
   left: 0;
   padding: 22px;
   width: 201px;
@@ -1017,16 +1023,16 @@ textarea::-moz-focus-inner {
 .decor_triangleUp:after {
   content: "";
   position: absolute;
-  top: -10px;
-  left: 10px;
+  top: -18px;
+  left: 8px;
   content: '';
   display: block;
   position: absolute;
   height: 0;
   width: 0;
-  border-bottom: 10px solid #f00;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
+  border-bottom: 18px solid rgba(0, 0, 0, 0.85);
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
   opacity: 0.85; }
 
 .bl_basket {
@@ -1086,7 +1092,12 @@ textarea::-moz-focus-inner {
   width: 95%;
   max-width: 234px;
   height: 30px;
-  line-height: 30px; }
+  line-height: 30px;
+  transition: all ease-in .3s; }
+
+.bl_search.bl_search__active {
+  left: 0;
+  transition: all ease-in .3s; }
 
 .bl_search__field {
   width: 100%;
@@ -1132,6 +1143,15 @@ textarea::-moz-focus-inner {
     background-position: -75px -94px;
     width: 28px;
     height: 22px; }
+
+.btn_search__mobile {
+  display: none;
+  position: relative;
+  width: 32px;
+  height: 32px;
+  background-color: #992727;
+  border: 1px solid #000;
+  margin-left: 20px; }
 
 /*********************************************/
 /*SECTIONS*/
@@ -1341,6 +1361,7 @@ textarea::-moz-focus-inner {
 .product_slider__item {
   position: relative;
   max-width: 128px;
+  margin: 0 auto;
   text-align: center; }
 
 .product_slider__link {
@@ -1367,7 +1388,7 @@ textarea::-moz-focus-inner {
 
 .product_slider .owl-dots {
   z-index: 10;
-  margin-top: 80px;
+  margin-top: 74px;
   text-align: center; }
   .product_slider .owl-dots .owl-dot {
     display: inline-block;
@@ -1388,11 +1409,13 @@ textarea::-moz-focus-inner {
   min-height: 300px; }
 
 .bl_banner {
+  margin-top: 12px;
   position: relative;
   width: 100%; }
 
 .bl_banner__img {
-  min-width: 100%; }
+  min-width: 100%;
+  box-shadow: -1px 3px 10px rgba(0, 0, 0, 0.75); }
 
 .bl_banner__text {
   position: absolute;
@@ -1401,18 +1424,18 @@ textarea::-moz-focus-inner {
   -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
   max-width: 503px;
-  height: 67px;
+  height: 82px;
   text-shadow: 0 1px 4px rgba(1, 1, 1, 0.75);
   color: #fff;
   font-family: "Helvetica Neue - Medium Italic", sans-serif;
   font-style: italic;
   font-size: 72px;
   font-weight: 400;
-  line-height: 13.53px; }
+  line-height: 1; }
 
 .bl_aboutCompany__title {
   display: block;
-  margin: 0 auto;
+  margin: 84px auto 0;
   text-align: center;
   min-width: 190px;
   height: 35px;
@@ -1426,7 +1449,7 @@ textarea::-moz-focus-inner {
 .bl_aboutCompany {
   position: relative;
   width: 100%;
-  margin-top: 50px; }
+  margin-top: 54px; }
 
 .bl_aboutCompany__navigation {
   width: 100%; }
@@ -1457,7 +1480,7 @@ textarea::-moz-focus-inner {
   border: 7px solid #fff;
   background-color: #fff;
   box-sizing: border-box;
-  padding: 41px 46px 60px 49px;
+  padding: 42px 12px 50px 42px;
   z-index: 2; }
   .bl_ceo p {
     width: 100%;
@@ -1469,6 +1492,12 @@ textarea::-moz-focus-inner {
     line-height: 1;
     font-weight: 300;
     text-indent: 15px; }
+
+.bl_ceo__showMore {
+  display: none;
+  margin-top: 10px;
+  background: none;
+  color: #f00; }
 
 .banner_zone {
   width: 100%; }
@@ -1552,6 +1581,9 @@ textarea::-moz-focus-inner {
     font-size: 48px;
     line-height: 43.8px; }
 
+.for_bombed {
+  display: none; }
+
 /*********************************************/
 /*FOOTER*/
 /*********************************************/
@@ -1560,6 +1592,7 @@ textarea::-moz-focus-inner {
   width: 100%; }
 
 .bl_global2 {
+  position: relative;
   width: 100%;
   min-height: 320px;
   margin-top: -62px;
@@ -1620,7 +1653,124 @@ textarea::-moz-focus-inner {
 /*Desktop First Method*/
 /*********************************************/
 /* Large Devices, Wide Screens 1280px */
+@media only screen and (max-width: 1200px) {
+  .bl_basket {
+    left: 0; }
+  .bl_bigBasket__text, .bl_basket__text {
+    float: none; }
+  .bl_banner__text {
+    font-size: 66px; } }
+
 /* Medium Devices, Desktops 992px */
+@media only screen and (max-width: 991px) {
+  .header {
+    position: fixed;
+    z-index: 4; }
+  .bl_basket {
+    width: 152px; }
+  .button_navigation {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 3; }
+  .bl_banner__text {
+    font-size: 48px; }
+  .bl_global__inner {
+    margin-top: 55px; }
+  .bl_controls__registration {
+    margin-top: 10px; }
+  .bl_search {
+    float: none; }
+  .bl_language {
+    float: none; }
+  .mob_controls {
+    padding-left: 20px;
+    width: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-pack: justify;
+        justify-content: space-between; }
+  .bl_ceo__wrapper {
+    position: relative;
+    height: 300px;
+    overflow: hidden; }
+  .bl_ceo__showMore {
+    display: block; }
+  .banner_zone__first {
+    text-align: center; }
+  .bl_global2 {
+    min-height: 160px;
+    margin-top: 20px; }
+  .bl_navigation__full {
+    top: 56px;
+    left: -16px; } }
+
 /* Small Devices, Tablets 768px */
+@media only screen and (max-width: 768px) {
+  .bl_search {
+    position: fixed;
+    top: 48px;
+    left: -100%; }
+  .btn_search__mobile {
+    display: block; }
+  .bl_global__inner {
+    display: block; }
+  .bl_controls {
+    text-align: center;
+    margin: 10px auto; }
+  .bl_controls__enter {
+    padding-top: 18px; }
+  .bl_information {
+    margin: 0 auto; }
+  .bl_banner__text {
+    font-size: 6vw;
+    height: 50px; }
+  .footer_copiraite {
+    width: 100%;
+    text-align: center; }
+  .footer_navigation {
+    width: 100%;
+    text-align: center; }
+  .footer_navigation__item {
+    display: block; } }
+
+@media only screen and (max-width: 600px) {
+  .bl_logo__img {
+    width: 10%; }
+  .bl_logo__title {
+    font-size: 35px; }
+  .bl_information__button {
+    display: none; }
+  .bl_aboutCompany__link {
+    text-align: center; } }
+
 /* Extra Small Devices, Phones 480px */
+@media only screen and (max-width: 480px) {
+  .btn_search__mobile {
+    -ms-flex-order: 3;
+        order: 3; }
+  .bl_language {
+    display: none; }
+  .bl_banner__text {
+    height: 30px; } }
+
 /* Custom, iPhone Retina 320px */
+@media only screen and (max-width: 250px) {
+  .header, div:not(.for_bombed) {
+    display: none; }
+  .for_bombed {
+    display: block !important;
+    width: 100%;
+    min-height: 200px;
+    border: 1px solid #000; }
+    .for_bombed img {
+      display: block;
+      width: 100%;
+      margin: 0 auto; }
+    .for_bombed a {
+      font-size: 16px;
+      width: 100%;
+      display: block;
+      text-align: center; } }
