--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -11,6 +11,7 @@
 /*********************************************/
 
 @include font-face("Helvetica Neue", "../fonts/Helvetica Neue/HelveticaNeues", 400, normal, woff2 woff ttf);
+@include font-face("Helvetica Neue - Medium Italic", "../fonts/Helvetica Neue/HelveticaNeueCyr-Italic", 400, normal, woff2 woff ttf);
 @include font-face("Bebas Neue Bold", "../fonts/Bebas Neue/BebasNeueBold", 400, normal, woff2 woff ttf);
 
 /*********************************************/
@@ -389,7 +390,7 @@ textarea {
 .product_slider__item {
   position: relative;
   max-width: 128px;
-  //margin: 0 auto;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -427,7 +428,7 @@ textarea {
 
 .product_slider .owl-dots {
   z-index: 10;
-  margin-top: 80px;
+  margin-top: 74px;
   text-align: center;
   .owl-dot {
     display: inline-block;
@@ -453,12 +454,14 @@ textarea {
 }
 
 .bl_banner {
+  margin-top: 12px;
   position: relative;
   width: 100%;
 }
 
 .bl_banner__img {
   min-width: 100%;
+  box-shadow: -1px 3px 10px rgba(0, 0, 0, 0.75);
 }
 
 .bl_banner__text {
@@ -467,21 +470,21 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 503px;
-  height: 67px;
+  height: 82px;
   text-shadow: 0 1px 4px rgba(1, 1, 1, 0.75);
   color: #fff;
   font-family: $HelveticaNeueItalic;
   font-style: italic;
   font-size: 72px;
   font-weight: 400;
-  line-height: 13.53px;
+  line-height: 1;
 }
 
 ///////
 
 .bl_aboutCompany__title {
   display: block;
-  margin: 0 auto;
+  margin: 84px auto 0;
   text-align: center;
   min-width: 190px;
   height: 35px;
@@ -496,7 +499,7 @@ textarea {
 .bl_aboutCompany {
   position: relative;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 54px;
 }
 
 .bl_aboutCompany__navigation {
@@ -534,7 +537,7 @@ textarea {
   border: 7px solid #fff;
   background-color: #fff;
   box-sizing: border-box;
-  padding: 41px 46px 60px 49px;
+  padding: 42px 12px 50px 42px;
   z-index:2;
   p {
     width: 100%;
@@ -547,6 +550,14 @@ textarea {
     font-weight: 300;
     text-indent: 15px;
   }
+}
+
+
+.bl_ceo__showMore{
+  display: none;
+  margin-top: 10px;
+  background: none;
+  color: #f00;
 }
 
 ///////////////////
@@ -654,6 +665,11 @@ textarea {
     line-height: 43.8px;
   }
 }
+
+.for_bombed{
+  display: none;
+}
+
 
 /*********************************************/
 /*FOOTER*/
